# CS2-SC-study

./: Cargo.toml  README.md
src/: config.rs  constants.rs  main.rs
src/cs2/: dumper.rs  find_offsets.rs  mod.rs  offsets.rs  schema.rs  skin_changer.rs
src/cs2/entity/: player.rs  weapon.rs
src/os/: process.rs
